--- a/src/psy_config.h.in
+++ b/src/psy_config.h.in
@@ -8,3 +8,5 @@
 #cmakedefine HAVE_STDLIB_H      1
 #cmakedefine HAVE_STRING_H      1
 #cmakedefine HAVE_SYS_STAT_H    1
+#cmakedefine HAVE_GL_H          1
+#cmakedefine HAVE_APPLE_GL_H    1
