Add support for platform specific glew.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,15 @@ find_package(PkgConfig)
 find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 
-check_include_files(stdio.h HAVE_STDIO_H REQUIRED)
-check_include_files(stdlib.h HAVE_STDLIB_H REQUIRED)
-check_include_files(stdarg.h HAVE_STDARG_H REQUIRED)
-check_include_files(string.h HAVE_STRING_H REQUIRED)
-check_include_files(sys/stat.h HAVE_SYS_STAT_H)
-check_include_files(GL/gl.h HAVE_GL_H)
-check_include_files(OpenGL/gl.h HAVE_APPLE_GL_H)
+check_include_files(stdio.h         HAVE_STDIO_H        REQUIRED)
+check_include_files(stdlib.h        HAVE_STDLIB_H       REQUIRED)
+check_include_files(stdarg.h        HAVE_STDARG_H       REQUIRED)
+check_include_files(string.h        HAVE_STRING_H       REQUIRED)
+check_include_files(sys/stat.h      HAVE_SYS__STAT_H            )
+check_include_files(GL/gl.h         HAVE_GL__GL_H               )
+check_include_files(OpenGL/gl.h     HAVE_OPENGL__GL_H           )
+check_include_files(GL/glew.h       HAVE_GL__GLEW_H             )
+check_include_files(OpenGL/glew.h   HAVE_GL__GLEW_H             )
 
 # Present us with warnings.
 if (MSVC)
