--- a/src/psy_config.h.in
+++ b/src/psy_config.h.in
@@ -20,9 +20,11 @@
 #define PSY_VERSION_MICRO @PSY_VERSION_MICRO@
 #define PSY_VERSION_STRING "@PSY_VERSION_STRING@"
 
-#cmakedefine HAVE_STDIO_H       1
-#cmakedefine HAVE_STDLIB_H      1
-#cmakedefine HAVE_STRING_H      1
-#cmakedefine HAVE_SYS_STAT_H    1
-#cmakedefine HAVE_GL_H          1
-#cmakedefine HAVE_APPLE_GL_H    1
+#cmakedefine HAVE_STDIO_H           1
+#cmakedefine HAVE_STDLIB_H          1
+#cmakedefine HAVE_STRING_H          1
+#cmakedefine HAVE_SYS_STAT_H        1
+#cmakedefine HAVE_GL__GL_H          1
+#cmakedefine HAVE_OPENGL__GL_H      1
+#cmakedefine HAVE_GL__GLEW_H        1
+#cmakedefine HAVE_OPENGL__GLEW_H    1
