Unittest: add shaders for gles remove 'f' suffixes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -65,4 +65,14 @@ if (BUILD_UNIT_TESTS)
             ${CMAKE_CURRENT_BINARY_DIR}/gl_shaders/test_fragment_shader.frag
         COPYONLY
         )
+    configure_file(
+            gl_shaders/test_vertex_shader_es.vert
+            ${CMAKE_CURRENT_BINARY_DIR}/gl_shaders/test_vertex_shader_es.vert
+        COPYONLY
+        )
+    configure_file(
+            gl_shaders/test_fragment_shader_es.frag
+            ${CMAKE_CURRENT_BINARY_DIR}/gl_shaders/test_fragment_shader_es.frag
+        COPYONLY
+        )
 endif()
